; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_io.c_wl1251_reg_write32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wl1251/extr_io.c_wl1251_reg_write32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1251 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wl1251_reg_write32(%struct.wl1251* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.wl1251*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.wl1251* %0, %struct.wl1251** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.wl1251*, %struct.wl1251** %4, align 8
  %8 = load %struct.wl1251*, %struct.wl1251** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @wl1251_translate_reg_addr(%struct.wl1251* %8, i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @wl1251_write32(%struct.wl1251* %7, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @wl1251_write32(%struct.wl1251*, i32, i32) #1

declare dso_local i32 @wl1251_translate_reg_addr(%struct.wl1251*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
